--- a/3.ConvolutionalNetworks/App/app1/templates/index.html
+++ b/3.ConvolutionalNetworks/App/app1/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Sightengine demo - Python and Flask</title>
+  <title>Python and Flask</title>
   <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/app.css') }}">
 </head>
 
@@ -16,10 +16,9 @@
     <input type="submit" value="Upload your image" class="btn btn-primary">
   </form>
 
-  <span class="navbar-text"> Image moderation with
-      <a href="https://sightengine.com/">Sightengine</a>
   </span>
 </header>
+
 
 </body>
 </html>
